 Bug 539060 -  Crash [@ do_QueryFrame::operator<nsIPageSequenceFrame> nsIPageSequenceFrame*() ] in print preview , r=roc

--HG--
extra : rebase_source : 246c540277da95dbc670bcfc899dc9f9796f603e