layout/printing/nsPrintEngine.cpp
@@ -1893,7 +1893,7 @@ nsPrintEngine::ReflowPrintObject(nsPrintObject * aPO)
     // Without a frame, this document can't be displayed; therefore, there is no
     // point to reflowing it
     if (!frame) {
-      aPO->mDontPrint = PR_TRUE;
+      SetPrintPO(aPO, PR_FALSE);
       return NS_OK;
     }
 
